--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,6 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
-	width: 90%;
-	margin: auto;
 }
 ol, ul {
 	list-style: none;
@@ -48,58 +46,137 @@ table {
 	border-spacing: 0;
 }
  /* ---------------Modifications--------------------*/
- header {
-	 height: 50px;
-	 background-color: #1B262C;
-	 border-radius: 10px;
- }
- nav ul {
-	display: flex;
-	justify-content: flex-end;
-	align-items: center;
-	gap: 2%;
-	height: 50px;
-}
-nav {
-	margin-right: 3%;
-}
-nav ul li a {
-	color: #F6F2D4;
-}
-h1 {
-	font-size: 3rem;
+header{
+	background-image: url("../images/artic1.jpg");
+	background-size: cover;
 	text-align: center;
-	padding:20px 0;
 }
-.para {
-	background-color: rgba(27, 38, 44, .5);
-	width: 60%;
+
+h1{
+	color: #E8FFC2;
+	font-size: 3.5rem;
+	padding-top: 180px;
+	line-height: 1.5;
+	width: 95%;
 	margin: auto;
-	border-radius: 10px;
+	font-family: 'Montserrat';
 }
-.quest  {
-	background-color: rgba(47, 11, 44, .5);
-	font-family: 'Share Tech Mono';
-	width: 60%;
-	margin: auto;
-	border-radius: 7px;
-	padding: 10px 15px;
+
+h3{
 	font-size: 1.5rem;
-	border: solid black 1px;
+	padding-top: 30px;
+	color: white;
+	line-height: 1.2;
+	padding-bottom: 100px;
+	width: 95%;
+	margin: auto;
+	font-family: 'Montserrat';
+	font-weight: 100;
+}
+
+h2{
+	font-size: 2.5rem;
+	padding-top: 100px;
+	color: black;
+	width: 95%;
+	margin: auto;
+}
+
+.within{
+	width: 70%;
+	margin: auto;
+	display: flex;
+	justify-content: space-evenly;
+	flex-wrap: wrap;
+	padding-bottom: 40px;
 }
 
 .first-section {
-	background-color: #406882;
-	color: #F6F2D4;
+	background-color: #EFFFFD;
+	text-align: center;
 }
 
-.first-section p {
-	padding: 10px 15px;
-	line-height: 1.2rem;
-	color: #49FF00;
-	font-family: 'Cutive Mono';
+.site {
+	width: 30%;
+	background-color: #C9CCD5;
+	border-radius: 10px;
 }
 
-i {
-	color: azure;
+img{
+	width: 100%;
+	object-fit:contain;
 }
+ span{
+	 padding: 10px;
+	 display: block;
+	 font-size: 1.2rem;
+	 font-family: 'Montserrat';
+ }
+
+ .first-section h3{
+	 color: black;
+	 padding-bottom: 30px;
+	 font-family: 'Montserrat';
+ }
+  .about {
+	  padding-top: 30px;
+	  background-color: #FAF3F3;
+  }
+
+  .about h2 {
+	  text-align: center;
+	  padding-bottom: 15px;
+	  padding-top: 35px;
+  }
+
+  p{
+	  width: 90%;
+	  margin: auto;
+	  font-size: 1.5rem;
+	  font-family: 'Montserrat';
+	  line-height: 3.4;
+  }
+
+  i {
+	  padding-right: 5px;
+  }
+
+  .contact {
+	  align-items: center;
+	  padding-bottom: 30px;
+  }
+  .contact h2{
+	  text-align: center;
+	  padding-top: 35px;
+	  padding-bottom: 15px;
+  }
+.contact p {
+	line-height: 1.4;
+	align-items: center;
+}
+ form{
+	 border: #3282B8 7px dashed;
+	 width: 50%;
+	 margin: auto;
+ }
+  footer {
+	  background-color: #1B262C;
+	  color: #E8FFC2;
+	  padding: 30px 0 0 15px;
+	  text-align: center;
+  }
+  @media only screen and (max-width: 1000px)
+  {
+	  .within {
+		  flex-direction: column;
+		  padding-bottom: 40px;
+	  }
+	  .site{
+		  width: 100%;
+		  margin: 20px;
+	  }
+
+	  .about p {
+		  font-size: 1rem;
+	  }
+  }
